--- a/wordle_planning.html
+++ b/wordle_planning.html
@@ -6,6 +6,7 @@
         <script src="wordle_planning.js" charset="utf-8"></script>
     </head>
     <body onload="main();">
+        <button onclick="document.location.reload();">New Word</button>
         <p id="output" style="font-family:monospace;">
 
         </p>
