--- a/wordle_solver_prototype.html
+++ b/wordle_solver_prototype.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <script src="wordle_planning.js" charset="utf-8"></script>
+        <script src="main.js" charset="utf-8"></script>
     </head>
     <body onload="main();">
         <button onclick="document.location.reload();">New Word</button>
