Rename to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Wordle Solver</title>
         <script src="main.js" charset="utf-8"></script>
     </head>
     <body onload="main();">
