Fixed misspelling in solveWord()

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Wordle Solver</title>
         <script src="main.js" charset="utf-8"></script>
     </head>
-    <body onload="solve_word();">
-        <button onclick="solve_word(document.getElementById('word-input').value);">New Word</button><input id="word-input" placeholder="New Word">
+    <body onload="solveWord();">
+        <button onclick="solveWord(document.getElementById('word-input').value);">New Word</button><input id="word-input" placeholder="New Word">
         <p id="output" style="font-family:monospace;">
 
         </p>
