--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="main.js" charset="utf-8"></script>
     </head>
     <body onload="solveWord();">
-        <button onclick="solveWord(document.getElementById('word-input').value);">New Word</button>&nbsp;&nbsp;&nbsp;<input id="word-input" placeholder="">
+        <button onclick="solveWord(document.getElementById('word-input').value);">New Word</button>&nbsp;&nbsp;&nbsp;<input id="word-input" placeholder="Leave blank for random">
         <p id="output" style="font-family:monospace;">
 
         </p>
